# artyBoardVHDLuart

./: .gitignore  artyUartPrj.xpr  kintechUart.xpr  top_behav.wcfg
artyFTDI/: artyFTDI.xpr  removeErr.tcl
artyUartPrj.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
artyUartPrj.runs/.jobs/: vrs_config_1.xml  vrs_config_17.xml  vrs_config_20.xml  vrs_config_5.xml  vrs_config_7.xml  vrs_config_9.xml
artyUartPrj.runs/clk_wiz_0_synth_1/: .vivado.begin.rst  clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_utilization_synth.pb  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
artyUartPrj.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  top.bit  top.tcl  top.vdi  top_26496.backup.vdi  top_28166.backup.vdi  top_28724.backup.vdi  top_clock_utilization_routed.rpt  top_control_sets_placed.rpt  top_drc_opted.rpt  top_drc_routed.rpt  top_io_placed.rpt  top_methodology_drc_routed.rpt  top_opt.dcp  top_placed.dcp  top_power_routed.rpt  top_power_routed.rpx  top_power_summary_routed.pb  top_routed.dcp  top_timing_summary_routed.rpt  top_timing_summary_routed.rpx  top_utilization_placed.pb  top_utilization_placed.rpt  usage_statistics_webtalk.html  usage_statistics_webtalk.xml  vivado.jou  vivado.pb  vivado_26496.backup.jou  (+4 more)
serialPortSoftware/: CMakeLists.txt  main.cpp
serialPortSoftware/arduinoTest/serialSendTest/: serialSendTest.ino
(+225 files in other folders)
